# Rust-Log

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench_redactor.rs
src/: cli.rs  error.rs  lib.rs  main.rs  patterns.rs  processor.rs  redactor.rs  reporter.rs
tests/: test_patterns.rs  test_redactor.rs
