[package]
name = "log-anonymizer"
version = "0.1.0"
edition = "2021"
description = "High-speed PII redaction for log files"
authors = ["Satyam Mistari"]

[[bin]]
name = "log-anonymizer"
path = "src/main.rs"

[dependencies]
regex = "1.10"
rayon = "1.10"
memmap2 = "0.9"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
sha2 = "0.10"
ratatui = "0.30.0"
crossterm = "0.29.0"
unicode-width = "0.2.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
uuid = { version = "1.6", features = ["v4"] }

[[bench]]
name = "bench_redactor"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
